Fix modal appears behind suggestions

--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ body {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, .2);
-    z-index: 1001;
+    z-index: 1201;
 }
 
 .modal-content {
